# zoterorag

./: .gitignore  README.md  environment.yml  pyproject.toml  zotero_rag.ipynb
zoterorag/: datamodel.py  rag.py  utils.py
